# training-chatbot

./: README.md
.github/workflows/: biome.yml  coderabbit.yml
backend/: pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
